deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gameon-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - api.gameon.nz
    secretName: tls-secret
  rules:
  - host: api.gameon.nz
    http:
      paths:
      - backend:
          serviceName: tournaments
          servicePort: 80
        path: /tournaments
      - backend:
          serviceName: users
          servicePort: 80
        path: /me
